- Improved "filterbox" utility. - Added preliminary prototype of "projects" app. - Improved layout of action list.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@248 71535020-02ba-11df-897e-95fb7fca2173

--- a/settings.py.tmpl
+++ b/settings.py.tmpl
@@ -147,6 +147,8 @@ INSTALLED_APPS = (
     'prometeo.core.auth',
     'prometeo.core.registration',
     'prometeo.core.taxonomy',
+
+    'prometeo.projects',
 )
 
 # Authorization and login options.
