--- a/themes/default/templates/auth/user_list.html
+++ b/themes/default/templates/auth/user_list.html
@@ -6,8 +6,6 @@
 
 {% block meta_title %}{% trans "Users" %}{% endblock %}
 
-{% block extrahead %}<link rel="stylesheet" href="{{ MEDIA_URL }}css/filterbox.css" type="text/css" media="all"/>{% endblock %}
-
 {% block breadcrumbs %}
     {% add_crumb 'Home' '/' %}
     {% add_crumb 'Users' %}
@@ -22,6 +20,8 @@
 
 {% block main %}
 {% include 'elements/filterbox.html' %}
-{% detail_table object_list '["username", "first_name", "last_name", "email"]' %}
-{% include "elements/paginator.html" %}
+<div class="details">
+    {% detail_table object_list '["username", "first_name", "last_name", "email"]' %}
+    {% include "elements/paginator.html" %}
+</div>
 {% endblock %}
