- It's now possible to add new users from the front-end. - Fixed all the "core.auth" view names.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@249 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/auth/login.html
+++ b/themes/default/templates/auth/login.html
@@ -7,7 +7,7 @@
 
 {% block breadcrumbs %}
     {% add_crumb 'Home' '/' %}
-    {% add_crumb 'Users' 'users_list' %}
+    {% add_crumb 'Users' 'user_list' %}
     {% add_crumb 'Login' %}
     {% render_breadcrumbs %}
 {% endblock %}
@@ -20,7 +20,7 @@
 
 {% block main %}
 <p>{% blocktrans %}Login using your <strong>username</strong> and <strong>password</strong>.{% endblocktrans %}</p>
-<form method="post" action=".">
+<form method="post" action="{% url user_login %}">
     {% csrf_token %}
     <input type="hidden" name="next" value="{{ next }}" />
     {{ form.as_p }}
