--- a/themes/default/templates/auth/user_delete.html
+++ b/themes/default/templates/auth/user_delete.html
@@ -7,7 +7,7 @@
 
 {% block breadcrumbs %}
     {% add_crumb 'Home' '/' %}
-    {% add_crumb 'Users' 'users_list' %}
+    {% add_crumb 'Users' 'user_list' %}
     {% add_crumb object object.get_absolute_url %}
     {% add_crumb 'Delete' %}
     {% render_breadcrumbs %}
@@ -21,7 +21,7 @@
 {% endblock %}
 
 {% block main %}
-<form method="post" action="{% url users_delete object.username %}">
+<form method="post" action="{% url user_delete object.username %}">
     {% csrf_token %}
     <p>{% trans "Are you sure you want to delete this user?" %}</p>
     <span class="submit"><input type="submit" value="{% trans "Yes, I'm sure." %}" /></span>
