--- a/themes/default/templates/auth/user_edit.html
+++ b/themes/default/templates/auth/user_edit.html
@@ -3,25 +3,39 @@
 {% load i18n %}
 {% load breadcrumbs %}
 
-{% block meta_title %}{% trans 'Edit' %}{% endblock %}
+{% block meta_title %}
+{% if object.pk %}{% trans 'Edit user' %}{% else %}{% trans 'Add user' %}{% endif %}
+{% endblock %}
 
 {% block breadcrumbs %}
     {% add_crumb 'Home' '/' %}
-    {% add_crumb 'Users' 'users_list' %}
+    {% add_crumb 'Users' 'user_list' %}
+    {% if object.pk %}
     {% add_crumb object object.get_absolute_url %}
     {% add_crumb 'Edit' %}
+    {% else %}
+    {% add_crumb 'Add' %}
+    {% endif %}
     {% render_breadcrumbs %}
 {% endblock %}
 
 {% block title %}
 <div class="title">
+    {% if object.pk %}
     <h1>{{ object }}</h1>
-    <h2>{% trans 'Edit' %}</h2>
+    <h2>{% trans 'Edit user' %}</h2>
+    {% else %}
+    <h1>{% trans 'Add user' %}</h1>
+    {% endif %}
 </div>
 {% endblock %}
 
 {% block main %}
-<form method="post" action="{% url users_edit object.username %}">
+{% if object.pk %}
+<form method="post" action="{% url user_edit object.username %}">
+{% else %}
+<form method="post" action="{% url user_add %}">
+{% endif %}
     {% csrf_token %}
     {{ form.as_p }}
     <span class="submit"><input type="submit" value="{% trans 'Save' %}" /></span>
