Improved search template rendering.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@250 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/taxonomy/search.html
+++ b/themes/default/templates/taxonomy/search.html
@@ -11,18 +11,24 @@
     {% render_breadcrumbs %}
 {% endblock %}
 
-{% block title %}<h1 class="title">{% blocktrans %}Search results for {{ query }}{% endblocktrans %}</h1>{% endblock %}
+{% block title %}
+<div class="title">
+    <h1>{% blocktrans %}Search results for {{ query }}{% endblocktrans %}</h1>
+</div>
+{% endblock %}
 
 {% block main %}
+{% if object_list %}
 <ul class="result-list">
     {% for object in object_list %}
     <li class="result">
         <h3><strong>{% trans object.content_type.name|title %}</strong>: <a href="{{ object.get_absolute_url }}">{{ object.title|title }}</a></h3>
     </li>
-    {% empty %}
-    <li class="result"><span class="disabled">{% trans "No results found." %}</span></li>
     {% endfor %}
 </ul>
+{% else %}
+<span class="disabled">{% trans "No results found." %}</span>
+{% endif %}
 
 {% include "elements/paginator.html" %}
 {% endblock %}
