--- a/themes/default/templates/taxonomy/search.html
+++ b/themes/default/templates/taxonomy/search.html
@@ -13,7 +13,11 @@
 
 {% block title %}
 <div class="title">
+    {% if query %}
     <h1>{% blocktrans %}Search results for {{ query }}{% endblocktrans %}</h1>
+    {% else %}
+    <h1>{% trans 'Search results' %}</h1>
+    {% endif %}
 </div>
 {% endblock %}
 
