--- a/themes/default/templates/auth/user_detail.html
+++ b/themes/default/templates/auth/user_detail.html
@@ -33,6 +33,7 @@
         {% endif %}
     </ul>
 </div>
+{% include 'elements/navigator.html' %}
 <div class="details">
     {% avatar object 90 %}
     <dl class="user-info">
