--- a/themes/default/templates/projects/project_detail.html
+++ b/themes/default/templates/projects/project_detail.html
@@ -49,6 +49,7 @@
         {% endif %}
     </ul>
 </div>
+{% include 'elements/navigator.html' %}
 <div class="details">
     {% with object.description as description %}
     {% include "projects/entry.html" %}
