--- a/themes/default/templates/projects/ticket_detail.html
+++ b/themes/default/templates/projects/ticket_detail.html
@@ -42,6 +42,7 @@
         {% endif %}
     </ul>
 </div>
+{% include 'elements/navigator.html' %}
 <div class="details">
     <table class="properties">
         <tr>
