Added support for ordering in "detail_table".
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@255 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/static/css/style.css
+++ b/themes/default/static/css/style.css
@@ -142,6 +142,17 @@ thead td, th { background: #dfdfdf; }
 
 th { text-align: right; }
 
+thead a.asc, thead a.desc {
+    float: left;
+    width: 100%;
+    background-position: right center;
+    background-repeat: no-repeat;
+}
+
+thead a.asc { background-image: url(images/up.png); }
+
+thead a.desc { background-image: url(images/down.png); }
+
 /**
  * Commons.
  */
