Improved filtering, sorting and table rendering.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@256 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/projects/milestone_list.html
+++ b/themes/default/templates/projects/milestone_list.html
@@ -30,7 +30,7 @@
     </ul>
 </div>
 <div class="details">
-    {% detail_table object_list "['title', 'parent_id', 'author_id', 'manager_id', 'created', 'date_due', 'closed']" %}
+    {% detail_table object_list field_names %}
     {% include 'elements/paginator.html' %}
 </div>
 {% endblock %}
