--- a/themes/default/templates/projects/project_list.html
+++ b/themes/default/templates/projects/project_list.html
@@ -30,7 +30,7 @@
 </div>
 {% endif %}
 <div class="details">
-    {% detail_table object_list "['id', 'title', 'author_id', 'manager_id', 'status']" %}
+    {% detail_table object_list field_names %}
     {% include 'elements/paginator.html' %}
 </div>
 {% endblock %}
