--- a/themes/default/templates/auth/user_list.html
+++ b/themes/default/templates/auth/user_list.html
@@ -28,7 +28,7 @@
     </ul>
 </div>
 <div class="details">
-    {% detail_table object_list '["username", "first_name", "last_name", "email"]' %}
+    {% detail_table object_list field_names %}
     {% include "elements/paginator.html" %}
 </div>
 {% endblock %}
