- Added support for project areas. - Improved "xxx_detail" views in the "projects" app. - Removed "tease" field from "Project" model.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@257 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/static/css/style.css
+++ b/themes/default/static/css/style.css
@@ -153,6 +153,8 @@ thead a.asc { background-image: url(images/up.png); }
 
 thead a.desc { background-image: url(images/down.png); }
 
+td p { margin: 0; }
+
 /**
  * Commons.
  */
