--- a/themes/default/templates/projects/area_delete.html
+++ b/themes/default/templates/projects/area_delete.html
@@ -9,7 +9,7 @@
     {% add_crumb 'Home' '/' %}
     {% add_crumb 'Projects' 'project_list' %}
     {% add_crumb object.project object.project.get_absolute_url %}
-    {% add_crumb 'Tickets' 'ticket_list' object.project.slug %}
+    {% add_crumb 'Areas' 'area_list' object.project.slug %}
     {% add_crumb object object.get_absolute_url %}
     {% add_crumb 'Delete' %}
     {% render_breadcrumbs %}
@@ -23,9 +23,9 @@
 {% endblock %}
 
 {% block main %}
-<form method="post" action="{% url ticket_delete object.project.slug object.pk %}">
+<form method="post" action="{% url area_delete object.project.slug object.slug %}">
     {% csrf_token %}
-    <p>{% trans "Are you sure you want to delete this ticket?" %}</p>
+    <p>{% trans "Are you sure you want to delete this area?" %}</p>
     <span class="submit"><input type="submit" value="{% trans "Yes, I'm sure." %}" /></span>
 </form>
 {% endblock %}
