--- a/themes/default/templates/projects/area_detail.html
+++ b/themes/default/templates/projects/area_detail.html
@@ -12,7 +12,7 @@
     {% add_crumb 'Home' '/' %}
     {% add_crumb 'Projects' 'project_list' %}
     {% add_crumb object.project object.project.get_absolute_url %}
-    {% add_crumb 'Milestones' 'milestone_list' object.project.slug %}
+    {% add_crumb 'Areas' 'area_list' object.project.slug %}
     {% add_crumb object %}
     {% render_breadcrumbs %}
 {% endblock %}
@@ -26,14 +26,14 @@
 {% block main %}
 <div class="actions">
     <ul>
-        {% if perms.projects.add_milestone %}
-        <li><a class="add" href="{% url milestone_add object.project.slug %}">{% trans 'Add' %}</a></li>
+        {% if perms.projects.add_area %}
+        <li><a class="add" href="{% url area_add object.project.slug %}">{% trans 'Add' %}</a></li>
         {% endif %}
-        {% if perms.projects.change_milestone %}
-        <li><a href="{% url milestone_edit object.project.slug object.slug %}">{% trans 'Edit' %}</a></li>
+        {% if perms.projects.change_area %}
+        <li><a href="{% url area_edit object.project.slug object.slug %}">{% trans 'Edit' %}</a></li>
         {% endif %}
-        {% if perms.projects.delete_milestone %}
-        <li><a href="{% url milestone_delete object.project.slug object.slug %}">{% trans 'Delete' %}</a></li>
+        {% if perms.projects.delete_area %}
+        <li><a href="{% url area_delete object.project.slug object.slug %}">{% trans 'Delete' %}</a></li>
         {% endif %}
     </ul>
 </div>
@@ -42,9 +42,17 @@
     <table class="properties">
         <tr>
             <th>{% trans "Project manager" %}:</th>
-            <td colspan="3">
+            <td>
                 {% if object.parent %}
                 <a class="manager" href="{{ object.manager.get_absolute_url }}">{{ object.manager }}</a>
+                {% else %}
+                <span class="disabled">{% trans "empty" %}</span>
+                {% endif %}
+            </td>
+            <th>{% trans "Parent" %}:</th>
+            <td>
+                {% if object.parent %}
+                <a class="parent" href="{{ object.parent.get_absolute_url }}">{{ object.parent }}</a>
                 {% else %}
                 <span class="disabled">{% trans "empty" %}</span>
                 {% endif %}
@@ -57,34 +65,13 @@
             <td>{{ object.created }}</td>
         </tr>
         <tr>
-            <th>{% trans "Parent" %}:</th>
-            <td>
-                {% if object.parent %}
-                <a class="parent" href="{{ object.parent.get_absolute_url }}">{{ object.parent }}</a>
-                {% else %}
-                <span class="disabled">{% trans "empty" %}</span>
-                {% endif %}
-            </td>
-            <th>{% trans "Date due" %}:</th>
-            <td>
-                {% if object.date_due %}
-                {{ object.date_due }}
-                {% else %}
-                <span class="disabled">{% trans "empty" %}</span>
-                {% endif %}
-            </td>
+            <th>{% trans "Tags" %}:</th>
+            <td colspan="3">{% for tag in object.tags.all %} <a class="tag" href="{{ tag.get_absolute_url }}">{{ tag }}</a>{% if not forloop.last %},{% endif %}{% empty %}<span class="disabled">{% trans "empty" %}</span>{% endfor %}</td>
         </tr>
         <tr>
-            <th>{% trans "Progress" %}:</th>
-            <td>{{ object.progress}}%</td>
-            <th>{% trans "Closed on" %}:</th>
-            <td>
-                {% if object.closed %}
-                {{ object.closed }}
-                {% else %}
-                <span class="disabled">{% trans "empty" %}</span>
-                {% endif %}
-            </td>
+            <th>{% trans "Categories" %}:</th>
+            <td colspan="3">{% for category in object.categories.all %} <a class="category" href="{{ category.get_absolute_url }}">{{ category }}</a>{% if not forloop.last %},{% endif %}{% empty %}<span class="disabled">{% trans "empty" %}</span>{% endfor %}</td>
+        </tr>
         <tr>
             <th>{% trans "Description" %}:</th>
             <td colspan="3">
