--- a/themes/default/templates/projects/project_detail.html
+++ b/themes/default/templates/projects/project_detail.html
@@ -18,13 +18,9 @@
 {% block title %}
 <div class="title">
     <h1>{{ object.title|escape|capfirst }}</h1>
-    {% with object.created as created %}
-    {% with object.author as author %}
-    {% include "projects/meta.html" %}
-    {% endwith %}
-    {% endwith %}
     <div class="menu">
         <ul>
+            <li><a href="{% url area_list object.slug %}">{% trans 'Areas' %}</a></li>
             <li><a href="{% url milestone_list object.slug %}">{% trans 'Milestones' %}</a></li>
             <li><a href="{% url ticket_list object.slug %}">{% trans 'Tickets' %}</a></li>
         </ul>
@@ -51,11 +47,56 @@
 </div>
 {% include 'elements/navigator.html' %}
 <div class="details">
-    {% with object.description as description %}
-    {% include "projects/entry.html" %}
-    {% endwith %}
-    {% include "taxonomy/categories.html" %}
-    {% include "taxonomy/tags.html" %}
+    <table class="properties">
+        <tr>
+            <th>{% trans "Project manager" %}:</th>
+            <td colspan="3">
+                {% if object.parent %}
+                <a class="manager" href="{{ object.manager.get_absolute_url }}">{{ object.manager }}</a>
+                {% else %}
+                <span class="disabled">{% trans "empty" %}</span>
+                {% endif %}
+            </td>
+        </tr>
+        <tr>
+            <th>{% trans "Created by" %}:</th>
+            <td><a class="author" href="{{ object.author.get_absolute_url }}">{{ object.author }}</a></td>
+            <th>{% trans "Created on" %}:</th>
+            <td>{{ object.created }}</td>
+        </tr>
+        <tr>
+            <th>{% trans "Status" %}:</th>
+            <td>{% trans object.status %}</td>
+            <th>{% trans "Closed on" %}:</th>
+            <td>
+                {% if object.closed %}
+                {{ object.closed }}
+                {% else %}
+                <span class="disabled">{% trans "empty" %}</span>
+                {% endif %}
+            </td>
+        </tr>
+        <tr>
+            <th>{% trans "Tags" %}:</th>
+            <td colspan="3">
+                {% for tag in object.tags.all %} <a class="tag" href="{{ tag.get_absolute_url }}">{{ tag }}</a>{% if not forloop.last %},{% endif %}{% empty %}<span class="disabled">{% trans "empty" %}</span>{% endfor %}
+            </td>
+        </tr>
+        <tr>
+            <th>{% trans "Categories" %}:</th>
+            <td colspan="3">
+                {% for category in object.categories.all %} <a class="category" href="{{ category.get_absolute_url }}">{{ category }}</a>{% if not forloop.last %},{% endif %}{% empty %}<span class="disabled">{% trans "empty" %}</span>{% endfor %}
+            </td>
+        </tr>
+        <tr>
+            <th>{% trans "Description" %}:</th>
+            <td colspan="3">
+                {% with object.description as description %}
+                {% include "projects/entry.html" %}
+                {% endwith %}
+            </td>
+        </tr>
+    </table>
 </div>
 {% include "elements/comments.html" %}
 {% endblock %}
