Added "min-width" rule to the "body" element.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@258 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/static/css/style.css
+++ b/themes/default/static/css/style.css
@@ -1,6 +1,7 @@
 html { background: #1f1f1f; }
 
 body {
+    min-width: 1024px;
     font-family: 'Helvetica', arial, sans-serif;
     font-size: 12px;
     line-height: 1.5em;
