--- a/themes/default/templates/projects/area_detail.html
+++ b/themes/default/templates/projects/area_detail.html
@@ -20,6 +20,11 @@
 {% block title %}
 <div class="title">
     <h1>{{ object|escape|capfirst }}</h1>
+    <div class="menu">
+        <ul>
+            <li><a href="{% url area_tickets object.project.slug object.slug %}">{% trans 'Tickets' %}</a></li>
+        </ul>
+    </div>
 </div>
 {% endblock %}
 
