Fixed static files handling for anonymous users.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@263 71535020-02ba-11df-897e-95fb7fca2173

--- a/settings.py.tmpl
+++ b/settings.py.tmpl
@@ -219,6 +219,7 @@ LOGIN_REQUIRED_URLS = (
 
 LOGIN_REQUIRED_URLS_EXCEPTIONS = (
     r'/media/(.*)$',
+    r'/static/(.*)$',
     r'/users/login/$',
     r'/users/register/$',
     r'/users/activate/(.*)$',
