- Added full taxonomy to all "projects" models. - Improved detail views.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@267 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/projects/area_detail.html
+++ b/themes/default/templates/projects/area_detail.html
@@ -46,7 +46,7 @@
 <div class="details">
     <table class="properties">
         <tr>
-            <th>{% trans "Project manager" %}:</th>
+            <th>{% trans "Manager" %}:</th>
             <td>
                 {% if object.parent %}
                 <a class="manager" href="{{ object.manager.get_absolute_url }}">{{ object.manager }}</a>
