--- a/themes/default/templates/projects/milestone_detail.html
+++ b/themes/default/templates/projects/milestone_detail.html
@@ -46,7 +46,7 @@
 <div class="details">
     <table class="properties">
         <tr>
-            <th>{% trans "Project manager" %}:</th>
+            <th>{% trans "Manager" %}:</th>
             <td colspan="3">
                 {% if object.parent %}
                 <a class="manager" href="{{ object.manager.get_absolute_url }}">{{ object.manager }}</a>
@@ -90,6 +90,15 @@
                 <span class="disabled">{% trans "empty" %}</span>
                 {% endif %}
             </td>
+        </tr>
+        <tr>
+            <th>{% trans "Tags" %}:</th>
+            <td colspan="3">{% for tag in object.tags.all %} <a class="tag" href="{{ tag.get_absolute_url }}">{{ tag }}</a>{% if not forloop.last %},{% endif %}{% empty %}<span class="disabled">{% trans "empty" %}</span>{% endfor %}</td>
+        </tr>
+        <tr>
+            <th>{% trans "Categories" %}:</th>
+            <td colspan="3">{% for category in object.categories.all %} <a class="category" href="{{ category.get_absolute_url }}">{{ category }}</a>{% if not forloop.last %},{% endif %}{% empty %}<span class="disabled">{% trans "empty" %}</span>{% endfor %}</td>
+        </tr>
         <tr>
             <th>{% trans "Description" %}:</th>
             <td colspan="3">
