Fixed redirect after comment posting.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@268 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/elements/comments.html
+++ b/themes/default/templates/elements/comments.html
@@ -33,7 +33,7 @@
     {% get_comment_form for object as form %}
     <form action="{% comment_form_target %}" method="post">
         {% csrf_token %}
-        <input type="hidden" name="next" value="{{ ticket.get_absolute_url }}" />
+        <input type="hidden" name="next" value="{{ request.META.PATH_INFO }}" />
         {% for field in form %}
         {% if field.is_hidden %}
         {{ field }}
