--- a/themes/default/templates/elements/comments.html
+++ b/themes/default/templates/elements/comments.html
@@ -33,7 +33,7 @@
     {% get_comment_form for object as form %}
     <form action="{% comment_form_target %}" method="post">
         {% csrf_token %}
-        <input type="hidden" name="next" value="{{ request.META.PATH_INFO }}" />
+        <input type="hidden" name="next" value="{{ object.get_absolute_url }}" />
         {% for field in form %}
         {% if field.is_hidden %}
         {{ field }}
