--- a/themes/default/templates/auth/user_list.html
+++ b/themes/default/templates/auth/user_list.html
@@ -23,7 +23,7 @@
 <div class="actions">
     <ul>
         {% if perms.auth.add_user %}
-        <li><a href="{% url user_add %}">{% trans 'Add' %}</a></li>
+        <li class="add"><a href="{% url user_add %}">{% trans 'Add' %}</a></li>
         {% endif %}
     </ul>
 </div>
