--- a/themes/default/templates/projects/milestone_detail.html
+++ b/themes/default/templates/projects/milestone_detail.html
@@ -22,7 +22,9 @@
     <h1>{{ object|escape|capfirst }}</h1>
     <div class="menu">
         <ul>
+            {% if perms.projects.change_ticket %}
             <li><a href="{% url milestone_tickets object.project.slug object.slug %}">{% trans 'Tickets' %}</a></li>
+            {% endif %}
         </ul>
     </div>
 </div>
@@ -32,13 +34,16 @@
 <div class="actions">
     <ul>
         {% if perms.projects.add_milestone %}
-        <li><a class="add" href="{% url milestone_add object.project.slug %}">{% trans 'Add' %}</a></li>
+        <li class="add"><a href="{% url milestone_add object.project.slug %}">{% trans 'Add' %}</a></li>
         {% endif %}
         {% if perms.projects.change_milestone %}
-        <li><a href="{% url milestone_edit object.project.slug object.slug %}">{% trans 'Edit' %}</a></li>
+        <li class="edit"><a href="{% url milestone_edit object.project.slug object.slug %}">{% trans 'Edit' %}</a></li>
         {% endif %}
         {% if perms.projects.delete_milestone %}
-        <li><a href="{% url milestone_delete object.project.slug object.slug %}">{% trans 'Delete' %}</a></li>
+        <li class="delete"><a href="{% url milestone_delete object.project.slug object.slug %}">{% trans 'Delete' %}</a></li>
+        {% endif %}
+        {% if perms.projects.change_milestone %}
+        <li class="list"><a href="{% url milestone_list object.project.slug %}">{% trans 'All' %}</a></li>
         {% endif %}
     </ul>
 </div>
