--- a/themes/default/templates/projects/milestone_list.html
+++ b/themes/default/templates/projects/milestone_list.html
@@ -25,7 +25,7 @@
 <div class="actions">
     <ul>
         {% if perms.projects.add_milestone %}
-        <li><a class="add" href="{% url milestone_add project.slug %}">{% trans 'Add' %}</a></li>
+        <li class="add"><a href="{% url milestone_add project.slug %}">{% trans 'Add' %}</a></li>
         {% endif %}
     </ul>
 </div>
