Added style rule for alt-rows in tables.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@271 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/static/css/style.css
+++ b/themes/default/static/css/style.css
@@ -164,6 +164,8 @@ thead a.asc { background-image: url(images/up.png); }
 
 thead a.desc { background-image: url(images/down.png); }
 
+tr.altrow td { background-color: #f2f2f2; }
+
 /**
  * Commons.
  */
